--- a/pages-html/blog.html
+++ b/pages-html/blog.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <link rel="stylesheet" type="text/css" href="../css/work.css">
+    <link rel="stylesheet" type="text/css" href="../css/blog.css">
   </head>
  <body>
   <div class="container-fluid">
@@ -31,12 +31,12 @@
             <ul class="nav navbar-nav">
               <li class=""><a href="../index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li class="active"><a href="work.html">Work</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li class=""><a href="contact.html">Contact</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li class="active"><a href="blog.html">Blog</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#"><img src="../images/all-inclusive-small.png" alt="infinity-symbol"></a></li>
+              <li><a href="#"><img src="../images/all-inclusive-small.png"></a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </nav>
